# AnoBot

./: .gitignore  CMakeLists.txt  main.cpp
Chess/: CMakeLists.txt  board.h
src/Chess/: board.cpp  board.h  chess_coords.h  piece.h  position.h
test/: test.cpp
